# anubis-vector-forge

./: .gitignore  AndroidManifest (1).xml  CMakeLists.txt  ITelemetryService.kt  LEGAL_NOTICE.md  LICENSE.txt  MainActivity.kt  PotraceNativeBridge.kt  README_INSTALACION.md  TelemetryEvent.kt  TelemetryEventTest.kt  UltraTelemetryService.kt  UltraTelemetryServiceTest.kt  UltraVectorizerPlugin.kt  VectorResult.kt  VectorResultTest.kt  VectorizationEngine.kt  VectorizeUseCase.kt  VectorizeUseCaseTest.kt  build (1).gradle  build (2).gradle  build.gradle  build_apk.yml  main.dart  potrace.h  potrace_core.cpp  potrace_wrapper.cpp  proguard-rules (1).pro  proguard-rules.pro  pubspec (1).yaml  pubspec.yaml  settings.gradle  strings.xml  ultra_vectorizer_service.dart  vector_editor_screen.dart  vector_editor_screen_test.dart  vector_result.dart  vector_result_test.dart
